--- a/index.html
+++ b/index.html
@@ -4,13 +4,56 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link rel="stylesheet" href="css/style.css" />
 
     <title>Document</title>
   </head>
   <body>
-    <header>header</header>
-    <main>main</main>
-    <aside>aside</aside>
-    <footer>footer</footer>
+    <div class="container">
+      <nav>
+        <header>header</header>
+      </nav>
+      <div class="main-page">
+        <aside class="left">
+          <section class="food-menu">
+            <ul>
+              <li>food</li>
+              <li>foodstufgss</li>
+              <li>foodstufgss</li>
+              <li>foodstufgss</li>
+              <li>foodstufgss</li>
+              <li>foodstufgss</li>
+            </ul>
+          </section>
+        </aside>
+        <aside class="hotdog"></aside>
+        <main>
+          <section class="special">
+            <h1>Dagens Special</h1>
+            <img src="img/food.jpeg" alt="DagensSpecial" />
+          </section>
+          <section class="slide-show">
+            <img src="img/temp.png" alt="oldpic" /><img
+              src="img/temp2.png"
+              alt="oldpic2"
+            />
+          </section>
+        </main>
+        <aside class="right">
+          <section class="drink-menu">
+            <ul>
+              <li>Vardagar</li>
+              <li>Helger</li>
+            </ul>
+          </section>
+          <section class="info">
+            <ul>
+              <li>Vardagar</li>
+              <li>Helger</li>
+            </ul>
+          </section>
+        </aside>
+      </div>
+    </div>
   </body>
 </html>
