Grid template ändringar, Vecka 50
Ändrade lite smått och försökte lägga till en till kolumn.

--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
           </section>
         </aside>
         <aside class="hotdog"></aside>
+        <section>
+          <aside class="hotdogg"></aside>
+        </section>
         <main>
           <section class="special">
             <h1>Dagens Special</h1>
