--- a/index.html
+++ b/index.html
@@ -26,10 +26,7 @@
             </ul>
           </section>
         </aside>
-        <aside class="hotdog"></aside>
-        <section>
-          <aside class="hotdogg"></aside>
-        </section>
+        <aside class="hotdog-right"></aside>
         <main>
           <section class="special">
             <h1>Dagens Special</h1>
@@ -42,11 +39,12 @@
             />
           </section>
         </main>
+        <aside class="hotdog-left"></aside>
         <aside class="right">
           <section class="drink-menu">
             <ul>
-              <li>Vardagar</li>
-              <li>Helger</li>
+              <li>Cola</li>
+              <li>Pepsi</li>
             </ul>
           </section>
           <section class="info">
