lade till logga
fixade även till små misstag

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <body>
     <div class="container">
       <nav>
-        <header>header</header>
+        <img id="logga" src="img/korv_hund.svg" alt="logga" />
       </nav>
       <div class="main-page">
         <aside class="left">
@@ -33,9 +33,9 @@
             <img src="img/food.jpeg" alt="DagensSpecial" />
           </section>
           <section class="slide-show">
-            <img src="img/temp.png" alt="oldpic" /><img
-              src="img/temp2.png"
-              alt="oldpic2"
+            <img src="img/korv.jpg" alt="korvbild" /><img
+              src="img/restaurang.jpg"
+              alt="insidan"
             />
           </section>
         </main>
