--- a/index.html
+++ b/index.html
@@ -11,7 +11,11 @@
   <body>
     <div class="container">
       <nav>
-        <img id="logga" src="img/korv_hund.svg" alt="logga" />
+        <a id="logga" href="/">
+          <img src="img/korv_hund.svg" alt="logga" />
+        </a>
+        <a class="small-button nav-link" href="/menu.html">menu</a>
+        <a class="small-button nav-link" href="/about.html">Om Oss</a>
       </nav>
       <div class="main-page">
         <aside class="left">
